# tflite2onnx

./: .gitignore  LICENSE  README.md  codecov.yaml  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug-report.md  request-operator.md
.github/workflows/: build.yaml  ci.yaml  codeql-analysis.yml  publish.yml  rebase.yml  sanity.yaml  stale.yml  test.yml
assets/networks/densenet/: README
assets/networks/efficientnet_lite4/: README.md
assets/networks/mnasnet_1.0_224/: README.md
assets/networks/mobilenet_v1_1.0_224/: README.md
assets/networks/nasnet_mobile/: README.md
assets/networks/squeezenet/: README.md
assets/tests/: abs-add-rsqrt.float32.tflite  abs-sqrt.float32.tflite  abs.float32.tflite  add-broadcast.float32.tflite  add-broadcast2.float32.tflite  add-relu.float32.tflite  add.float32.tflite  avgpool-concat.float32.tflite  avgpooling.float32.tflite  concat.float32.tflite  concat2.float32.tflite  conv-dilation.float32.tflite  conv-quant-fp16.float32.tflite  conv-relu.float32.tflite  conv-relu.uint8.tflite  conv-relu6.float32.tflite  conv-reshape-conv.float32.tflite  conv-reshape-multiple-conv.float32.tflite  conv-reshape.float32.tflite  conv-stride.float32.tflite  conv-transpose.float32.tflite  conv-transpose_relu.float32.tflite  conv.float32.tflite  conv.uint8.tflite  depthwise-conv-stride.float32.tflite  depthwise-conv.float32.tflite  depthwise-conv.uint8.tflite  fullyconnected-relu6.float32.tflite  fullyconnected.float32.tflite  maxpooling.float32.tflite  mean-keepdims.float32.tflite  mean.float32.tflite  mirror-pad.int32.tflite  mobilenet_v1_0.25_128.tflite  mul.float32.tflite  padding.float32.tflite  prelu.float32.tflite  relu.float32.tflite  relu6-power.float32.tflite  relu6.float32.tflite  (+18 more)
docs/: contribution-guide.md  data-layout-semantic.md  faq.md  how-to-enable-new-operator.md  operator-support-status.md  release-notes.md
scripts/: build-wheel.sh  gen-tflite-ops.py  source-me.sh  upload-pip.sh
tests/: example.py  test_cmd.py  test_explicit_layout.py  test_layout.py  test_mapping.py  test_misc.py  test_models.py  test_networks.py  test_ops.py  test_padding.py  test_quantize.py  test_tensor.py  test_unary.py  test_utils.py  util_for_test.py
tflite2onnx/: __init__.py  common.py  convert.py  graph.py  layout.py  mapping.py  misc.py  model.py  quantize.py  tensor.py  tflops.py  transpose.py  utils.py
tflite2onnx/op/: __init__.py  activation.py  binary.py  common.py  concat.py  conv.py  conv_transpose.py  convert.py  fullyconnected.py  logistic.py  mapping.py  op.py  operator.py  padding.py  pooling.py  quantize.py  reduce.py  reshape.py  resize.py  rsqrt.py  slice.py  softmax.py  split.py  squared_difference.py  squareddifference.py  transpose.py  unary.py
tools/: 1-build.sh  2-upload.sh  build-wheel.sh  gen-tflite-ops.py  open-github-connection.sh  upload-pip.sh
