[metadata]
name=tflite2onnx
version = attr: tflite2onnx.__version__
description = Convert TensorFlow Lite models to ONNX

author = 王振华(Zhenhua WANG)
author_email = hi@zhenhuaw.me
url = https://zhenhuaw.me/tflite2onnx

long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
keywords = tflite, onnx, deep-learning

project_urls =
    Bug Reports = https://github.com/zhenhuaw-me/tflite2onnx/issues
    Source = https://github.com/zhenhuaw-me/tflite2onnx

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
install_requires =
    numpy
    onnx
    tflite>=2.4.0
python_requires = >=3.5.*, <4
packages = find:


[options.entry_points]
console_scripts =
    tflite2onnx = tflite2onnx.convert:cmd_convert


[flake8]
max-line-length = 100
max-complexity = 10

[tool:pytest]
log_level = DEBUG
